[gd_scene load_steps=5 format=3 uid="uid://d17a1e45e00ld"]

[ext_resource type="Texture2D" uid="uid://bghfs6gy7uoot" path="res://assets/Towers/Watering Can/watering_can_ammo_single.png" id="1_cj02v"]
[ext_resource type="Script" uid="uid://w7jhrmnsfpsq" path="res://game/levels/level_components/towers/attacks/attack_list/water_path.gd" id="1_seh75"]

[sub_resource type="Curve2D" id="Curve2D_pd578"]
_data = {
"points": PackedVector2Array(0, 0, 0, 0, 505, 129, 0.15441561, -93.12092, -0.15441561, 93.12092, 359, 67, 0, 0, 0, 0, 360, 209)
}
point_count = 3

[sub_resource type="CircleShape2D" id="CircleShape2D_ashbi"]
radius = 30.0

[node name="WaterPath" type="Path2D"]
curve = SubResource("Curve2D_pd578")
script = ExtResource("1_seh75")

[node name="PathFollowMain" type="PathFollow2D" parent="."]
position = Vector2(505, 129)
rotation = -2.3253858

[node name="Hitbox" type="Area2D" parent="PathFollowMain"]
position = Vector2(-16.233955, 1.2077479)
collision_layer = 32
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="PathFollowMain/Hitbox"]
shape = SubResource("CircleShape2D_ashbi")

[node name="Sprite2D" type="Sprite2D" parent="PathFollowMain"]
rotation = 4.712389
scale = Vector2(0.1, 0.1)
texture = ExtResource("1_cj02v")

[node name="PathFollowVisual1" type="PathFollow2D" parent="."]
position = Vector2(505, 129)
rotation = -2.3253858

[node name="Drop1" type="Sprite2D" parent="PathFollowVisual1"]
position = Vector2(-19.179708, 20.399479)
rotation = 4.792674
scale = Vector2(0.075, 0.075)
texture = ExtResource("1_cj02v")

[node name="Drop2" type="Sprite2D" parent="PathFollowVisual1"]
position = Vector2(-20.268787, -14.939097)
rotation = 4.2586036
scale = Vector2(0.065921545, 0.070505865)
texture = ExtResource("1_cj02v")

[node name="PathFollowVisual2" type="PathFollow2D" parent="."]
position = Vector2(505, 129)
rotation = -2.3253858

[node name="Drop1" type="Sprite2D" parent="PathFollowVisual2"]
position = Vector2(-36.534286, 8.200355)
rotation = 4.871214
scale = Vector2(0.05, 0.05)
texture = ExtResource("1_cj02v")

[node name="Drop2" type="Sprite2D" parent="PathFollowVisual2"]
position = Vector2(-45.494736, -7.087239)
rotation = 4.4505897
scale = Vector2(0.03, 0.032)
texture = ExtResource("1_cj02v")

[connection signal="body_entered" from="PathFollowMain/Hitbox" to="." method="_on_hitbox_entered"]
